MIDI Device integration
+ Also fixed the socket bug

it acts strangely now, but doesn't keep creating new socket requests when the server is offline (yay)

--- a/TODOThing/package.json
+++ b/TODOThing/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
-    "launchpad-mini": "^2.4.0",
+    "midi": "^2.0.0",
     "mobx-react-lite": "^4.0.7",
     "oauth": "^0.10.0",
     "open": "^10.1.0",
