--- a/TODOThing/package.json
+++ b/TODOThing/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "loadavg-windows": "^1.1.1",
     "midi": "^2.0.0",
     "mobx-react-lite": "^4.0.7",
     "oauth": "^0.10.0",
