Unfinished discord integration

--- a/TODOThing/package.json
+++ b/TODOThing/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "discord-rpc": "^4.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
