Minor Weather Update

--- a/DeskThing/server/.env-template
+++ b/DeskThing/server/.env-template
@@ -19,3 +19,9 @@ DISCORD_CLIENT_ID= # Discord bot ID
 DISCORD_CLIENT_SECRET= # Discord bot Secret
 DISCORD_REDIR_URI=http://localhost:8888/discord/callback # This should match the callback on the spotify app
 DISCORD_USER_ID= # Discord user id (yours)
+
+# Audible login information (Just like your normal audible login)
+AUDIBLE_EMAIL=
+AUDIBLE_PASSWORD=
+AUDIBLE_COUNTRY_CODE=us (set this to your country code in lowercase)
+AUDIBLE_PORT=
