--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -1,10 +1,10 @@
 {
   "name": "deskthing",
   "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "description": "A DeskThing server UI to interface with the DeskThing car thing app",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": "Riprod",
+  "homepage": "https://github.com/ItsRiprod/DeskThing",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
