--- a/DeskThing/package.json
+++ b/DeskThing/package.json
@@ -20,11 +20,11 @@
     "oauth": "^0.10.0",
     "open": "^10.1.0",
     "path": "^0.12.7",
-    "url": "^0.11.3",
     "qs": "^6.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.11",
+    "url": "^0.11.3",
     "ws": "^8.17.0"
   },
   "devDependencies": {
@@ -34,9 +34,12 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-legacy": "^5.4.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
