--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -39,14 +39,18 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "electron": "^28.2.0",
     "electron-builder": "^24.9.1",
     "electron-vite": "^2.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
   }
