--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ yarn-error.log*
 tsconfig.tsbuildinfo
 DeskThing/server/auth_data.json
 AppExamples/spotify/node_modules/
+releases/Linux/deskthing-1.0.0.AppImage
