--- a/AppExamples/utility/package.json
+++ b/AppExamples/utility/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "esbuild": "0.21.5"
   }
 }
