--- a/AppExamples/spotify/package.json
+++ b/AppExamples/spotify/package.json
@@ -4,7 +4,8 @@
   "description": "The spotify app for the DeskThing desktop application",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild index.js --bundle --platform=node --outfile=builds/index.js",
+    "build": "esbuild index.js --bundle --platform=node --outfile=builds/index.js && npm run copy-manifest",
+    "copy-manifest": "node -e \"const fs = require('fs'); fs.copyFileSync('manifest.json', 'builds/manifest.json');\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
