--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ AppExamples/spotify/node_modules/
 releases/Linux/deskthing-0.3.0.AppImage
 /AppExamples/utility/node_modules
 /AppExamples/weather/node_modules
+/AppExamples/mediawincs
+/AppExamples/mediawin/node_modules
+/AppExamples/mediawin/builds
