--- a/AppExamples/mediawin/manifest.json
+++ b/AppExamples/mediawin/manifest.json
@@ -1,14 +1,18 @@
 {
-    "id": "local",
-    "isAudioSource": true,
-    "isWebApp": false,
-    "isLocalApp": false,
-    "requires": ["utility"],
-    "label": "Windows Media App",
-    "version": "v0.5.2",
-    "description": "The DeskThing Media Windows App is a local audio control control source for the DeskThing",
-    "author": "Riprod",
-    "platforms": ["windows"],
-    "homepage": "https://github.com/ItsRiprod/DeskThing",
-    "repository": "https://github.com/ItsRiprod/DeskThing"
-  }
+  "id": "local",
+  "isAudioSource": true,
+  "isWebApp": false,
+  "isLocalApp": false,
+  "requires": [
+    "utility"
+  ],
+  "label": "Windows Media App",
+  "version": "v0.5.3",
+  "description": "The DeskThing Media Windows App is a local audio control control source for the DeskThing",
+  "author": "Riprod",
+  "platforms": [
+    "windows"
+  ],
+  "homepage": "https://github.com/ItsRiprod/DeskThing",
+  "repository": "https://github.com/ItsRiprod/DeskThing"
+}
