--- a/AppExamples/weather/manifest.json
+++ b/AppExamples/weather/manifest.json
@@ -1,14 +1,18 @@
 {
-    "id": "weather",
-    "isAudioSource": false,
-    "isWebApp": false,
-    "isLocalApp": true,
-    "requires": [],
-    "label": "Weather App",
-    "version": "v0.5.2",
-    "description": "Displays the current weather",
-    "author": "Riprod",
-    "platforms": ["windows", "macos", "linux"],
-    "homepage": "https://github.com/ItsRiprod/DeskThing",
-    "repository": "https://github.com/ItsRiprod/DeskThing"
-  }
+  "id": "weather",
+  "isAudioSource": false,
+  "isWebApp": false,
+  "isLocalApp": true,
+  "requires": [],
+  "label": "Weather App",
+  "version": "v0.5.3",
+  "description": "Displays the current weather",
+  "author": "Riprod",
+  "platforms": [
+    "windows",
+    "macos",
+    "linux"
+  ],
+  "homepage": "https://github.com/ItsRiprod/DeskThing",
+  "repository": "https://github.com/ItsRiprod/DeskThing"
+}
