--- a/DeskThing/package.json
+++ b/DeskThing/package.json
@@ -1,10 +1,11 @@
 {
   "name": "deskthing",
   "private": true,
-  "version": "0.5.3",
+  "version": "0.5.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "host": "vite --host",
     "build": "tsc && vite build --base=\"./\"",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
