--- a/AppExamples/mediawin/manifest.json
+++ b/AppExamples/mediawin/manifest.json
@@ -2,12 +2,12 @@
   "id": "local",
   "isAudioSource": true,
   "isWebApp": false,
-  "isLocalApp": false,
+  "isLocalApp": true,
   "requires": [
     "utility"
   ],
   "label": "Windows Media App",
-  "version": "v0.5.3",
+  "version": "v0.5.4",
   "description": "The DeskThing Media Windows App is a local audio control control source for the DeskThing",
   "author": "Riprod",
   "platforms": [
