--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deskthing",
-  "version": "0.5.5",
+  "version": "0.5.6",
   "description": "A DeskThing server UI to interface with the DeskThing car thing app",
   "main": "./out/main/index.js",
   "author": "Riprod",
@@ -27,6 +27,7 @@
     "cross-unzip": "^0.2.1",
     "electron-updater": "^6.1.7",
     "jszip": "^3.10.1",
+    "react-rewards": "^2.0.4",
     "unzipper": "^0.12.1",
     "uuid": "^10.0.0",
     "ws": "^8.17.1"
