Discord + App Hosting

--- a/AppExamples/discord/discordweb/tsconfig.app.json
+++ b/AppExamples/discord/discordweb/tsconfig.app.json
@@ -19,6 +19,7 @@
 
     /* Linting */
     "strict": true,
+    "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
