--- a/AppExamples/app_template/package.json
+++ b/AppExamples/app_template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "example_app",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "description": "The example application to base other apps on",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-  }
+  "dependencies": {}
 }
