--- a/AppExamples/discord/package.json
+++ b/AppExamples/discord/package.json
@@ -1,12 +1,11 @@
 {
   "name": "discord",
-  "version": "0.5.6",
+  "version": "0.6.0",
   "description": "This app is a discord app that shows your call stats on the DeskThing",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "build": "npm run build-discordweb && esbuild index.js --bundle --platform=node --outfile=builds/index.js --format=esm && npm run copy-manifest",
-    "build-discordweb": "cd discordweb && npm install && npm run build",
+    "build": "npm run build-discordweb && esbuild index.js --bundle --platform=node --outfile=builds/index.js && npm run copy-manifest",
+    "build-discordweb": "cd discordweb && npm run build",
     "copy-manifest": "node -e \"const fs = require('fs'); fs.copyFileSync('manifest.json', 'builds/manifest.json');\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postversion": "node -e \"const fs = require('fs'); const manifest = require('./manifest.json'); const pkg = require('./package.json'); if (manifest.version !== pkg.version) { manifest.version = 'v' + pkg.version; fs.writeFileSync('./manifest.json', JSON.stringify(manifest, null, 2), 'utf8'); console.log('Updated manifest version to ' + pkg.version); }\" && npm install"
