Updated discord template

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ tsconfig.tsbuildinfo
 /AppExamples/discord copy/node_modules
 /AppExamples/discord copy/builds
 /AppExamples/discord/builds
+/AppExamples/discord template
