--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,6 @@ tsconfig.tsbuildinfo
 /AppExamples/discord copy/node_modules
 /AppExamples/discord copy/builds
 /AppExamples/discord/builds
-/AppExamples/discord template
+/AppExamples/discord template/node_modules
+/AppExamples/discord template/builds
+/AppExamples/timer_app/node_modules
