--- a/Apps/discord/package.json
+++ b/Apps/discord/package.json
@@ -7,7 +7,8 @@
     "build": "npm run build-discordweb && esbuild index.js --bundle --platform=node --outfile=builds/index.js && node buildHelper.js",
     "build-discordweb": "cd discordweb && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postversion": "node -e \"const fs = require('fs'); const manifest = require('./public/manifest.json'); const pkg = require('./package.json'); if (manifest.version !== pkg.version) { manifest.version = 'v' + pkg.version; fs.writeFileSync('./public/manifest.json', JSON.stringify(manifest, null, 2), 'utf8'); console.log('Updated manifest version to ' + pkg.version); }\" && npm install"  },
+    "postversion": "node -e \"const fs = require('fs'); const manifest = require('./public/manifest.json'); const pkg = require('./package.json'); if (manifest.version !== pkg.version) { manifest.version = 'v' + pkg.version; fs.writeFileSync('./public/manifest.json', JSON.stringify(manifest, null, 2), 'utf8'); console.log('Updated manifest version to ' + pkg.version); }\" && npm install"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
