--- a/Apps/discord/package.json
+++ b/Apps/discord/package.json
@@ -3,6 +3,7 @@
   "version": "0.7.0",
   "description": "This app is a discord app that shows your call stats on the DeskThing",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "npm run build-discordweb && esbuild index.js --bundle --platform=node --outfile=builds/index.js && node buildHelper.js",
     "build-discordweb": "cd discordweb && npm run build",
