discord-server integration

--- a/Apps/discord/package.json
+++ b/Apps/discord/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "npm run build-discordweb && esbuild index.js --bundle --platform=node --outfile=builds/index.js && node buildHelper.js",
+    "build": "npm run build-discordweb && esbuild index.js --bundle --platform=node --outfile=builds/index.js && node buildHelper.cjs",
     "build-discordweb": "cd discordweb && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postversion": "node -e \"const fs = require('fs'); const manifest = require('./public/manifest.json'); const pkg = require('./package.json'); if (manifest.version !== pkg.version) { manifest.version = 'v' + pkg.version; fs.writeFileSync('./public/manifest.json', JSON.stringify(manifest, null, 2), 'utf8'); console.log('Updated manifest version to ' + pkg.version); }\" && npm install"
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "esbuild": "0.21.5"
+    "esbuild": "^0.21.5"
   },
   "dependencies": {
     "discord-rpc": "^4.0.1"
