Discord + bug fixes

--- a/Apps/discord/package.json
+++ b/Apps/discord/package.json
@@ -1,11 +1,11 @@
 {
   "name": "discord",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "This app is a discord app that shows your call stats on the DeskThing",
-  "main": "index.js",
+  "main": "index.ts",
   "type": "module",
   "scripts": {
-    "build": "npm run build-discordweb && esbuild index.js --bundle --platform=node --outfile=builds/index.js && node buildHelper.cjs",
+    "build": "npm run build-discordweb && esbuild index.ts --bundle --platform=node --outfile=builds/index.js && node buildHelper.cjs",
     "build-discordweb": "cd discordweb && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postversion": "node -e \"const fs = require('fs'); const manifest = require('./public/manifest.json'); const pkg = require('./package.json'); if (manifest.version !== pkg.version) { manifest.version = 'v' + pkg.version; fs.writeFileSync('./public/manifest.json', JSON.stringify(manifest, null, 2), 'utf8'); console.log('Updated manifest version to ' + pkg.version); }\" && npm install"
@@ -14,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/discord-rpc": "^4.0.8",
     "esbuild": "^0.21.5"
   },
   "dependencies": {
+    "deskthing-server": "^0.7.5",
     "discord-rpc": "^4.0.1"
   }
 }
