--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
           github_token: ${{ secrets.github_token }}
           build_script_name: build:${{ runner.os }}
           package_manager: npm
-          package_root: ./Deskthing/DeskThingServer
+          package_root: ${GITHUB_WORKSPACE}/DeskThingServer
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
