--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,10 @@ jobs:
 
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
 
       - name: Install Node.js, NPM and Yarn
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
@@ -30,5 +30,5 @@ jobs:
           github_token: ${{ secrets.github_token }}
           build_script_name: build:${{ runner.os }}
           package_manager: npm
-          package_root: ${GITHUB_WORKSPACE}/DeskThingServer
+          package_root: $GITHUB_WORKSPACE/DeskThingServer
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
