--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,10 @@ jobs:
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            .github
+            DeskThingServer
 
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v4
@@ -30,5 +34,5 @@ jobs:
           github_token: ${{ secrets.github_token }}
           build_script_name: build:${{ runner.os }}
           package_manager: npm
-          package_root: $GITHUB_WORKSPACE/DeskThingServer
+          package_root: ${{ github.workspace }}/DeskThingServer
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
