--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
             .github
             DeskThingServer
 
-      - name: Install Node.js, NPM and Yarn
+      - name: Install Node.js, NPM
         uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -41,3 +41,15 @@ jobs:
           package_manager: npm
           package_root: ${{ github.workspace }}/DeskThingServer
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+
+      - name: Get the version
+        id: get_version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.github_token }}
+          file: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          asset_name: DeskThing-${{ steps.get_version.outputs.VERSION }}-${{ matrix.os }}
+          tag: ${{ steps.get_version.outputs.VERSION }}
