--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,6 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.github_token }}
-          file: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          file: ${{ github.workspace }}/DeskThingServer/dist/*
           asset_name: DeskThing-${{ steps.get_version.outputs.VERSION }}-${{ matrix.os }}
           tag: ${{ steps.get_version.outputs.VERSION }}
