--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,14 +42,10 @@ jobs:
           package_root: ${{ github.workspace }}/DeskThingServer
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
 
-      - name: Get the version
-        id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.github_token }}
           file: ./DeskThingServer/dist/*
-          asset_name: DeskThing-${{ steps.get_version.outputs.VERSION }}-${{ matrix.os }}
-          tag: ${{ steps.get_version.outputs.VERSION }}
+          asset_name: DeskThing-${{ matrix.os }}
+          tag: ${{ github.event.release.tag_name }}
