--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,8 +52,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload binaries to release
+      - name: Upload mac/linux binaries to release
+        if: ${{ matrix.os != 'windows-latest' }}
         uses: jaywcjlove/github-action-upload-assets@main
         with:
           asset-path: '["${{ github.workspace }}/DeskThingServer/dist/deskthing-*"]'
+          tag: ${{ steps.get_current_release.outputs.tag_name }}
+
+      - name: Upload windows binaries to release
+        if: ${{ matrix.os == 'windows-latest' }}
+        uses: jaywcjlove/github-action-upload-assets@main
+        with:
+          asset-path: '["${{ github.workspace }}\DeskThingServer\dist\deskthing-*"]'
           tag: ${{ steps.get_current_release.outputs.tag_name }}
