--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,12 @@ jobs:
           package_root: ${{ github.workspace }}/DeskThingServer
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
 
+      - name: List dir windows
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: |
+          cd DesthingServer\dist
+          dir /S
+
       - name: Get Current Release
         id: get_current_release
         uses: joutvhu/get-release@v1
@@ -59,9 +65,9 @@ jobs:
           asset-path: '["${{ github.workspace }}/DeskThingServer/dist/deskthing-*"]'
           tag: ${{ steps.get_current_release.outputs.tag_name }}
 
-      - name: Upload Windows binaries to release
-        if: ${{ matrix.os == 'windows-latest' }}
-        uses: jaywcjlove/github-action-upload-assets@main
-        with:
-          asset-path: '["${{ github.workspace }}\DeskThingServer\dist\**\*"]'
-          tag: ${{ steps.get_current_release.outputs.tag_name }}
+      # - name: Upload Windows binaries to release
+      #   if: ${{ matrix.os == 'windows-latest' }}
+      #   uses: jaywcjlove/github-action-upload-assets@main
+      #   with:
+      #     asset-path: '["${{ github.workspace }}\DeskThingServer\dist\**\*"]'
+      #     tag: ${{ steps.get_current_release.outputs.tag_name }}
