--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,8 @@ jobs:
       - name: List dir windows
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          cd DesthingServer/dist
+          dir /S
+          cd DesthingServer
           dir /S
 
       - name: Get Current Release
